# rylan-canon-library

./: .agent.md  .bandit  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODEOWNERS  MESH-MAN.md  Makefile  README.md  RELEASE-CHECKLIST-v4.5.1.md  RYLANLABS-INSTRUCTION-SET.md  canon-manifest.yaml  common.mk  instruction-set.md  pyproject.toml  release-checklist-v2-1-0.md  release-checklist-v2.1.0.md  requirements.txt  validate
.audit/: ci-remediation-2026-02-06.md
.audit/extraction-log/: README.md
.audit/phase-3-ci-fix/: ci-fix-log.txt  complete-fix-log.txt
.audit/phase-3-playbooks/: .gitkeep
.audit/phase-4-adoption/: .gitkeep
.audit/phase-4-trinity-fix/: COMPLETION_REPORT.md  analysis.txt
.github/agents/: .agent.md  claude.md
.github/instructions/: RYLANLABS-INSTRUCTION-SET.md  RYLANLABS-INSTRUCTION-SET.md.instructions.md  instructions.md
.github/workflows/: canon-validate.yml  compliance-gate.yml  repo-governance.yml  sentinel-loop.yml  sentinel-sync.yml  trinity-ci-workflow.yml  trinity-ci.yml
.github/workflows/templates/: trinity-ci-template.yml
.rylan/: common.mk  whitaker-ignore.yml
.rylan/baselines/: .gitleaks.toml.baseline  Makefile.baseline  canon-manifest.yaml.baseline  common.mk.baseline
ansible/: ansible.cfg-reference.md  inventory-patterns.md
ansible/playbook-templates/: ADOPTION_QUICKSTART.md  README.md  adoption-quickstart.md  backup-controller.yml  manage-firewall-rules.yml  manage-vlans.yml  rollback-firewall.yml
ansible_collections/rylanlabs/: unifi
configs/: .shellcheckrc  .yamllint  pyproject.toml
docs/: INTEGRATION_GUIDE.md  README.md  ansible-discipline.md  asymmetric-security.md  bash-discipline.md  ci-workflow-guide.md  defense-testing.md  dependency-discipline.md  emergency-procedures.md  eternal-glue.md  extraction-manifest.md  fortress-velocity-policy.md  hellodeolu-v6.md  hellodeolu-v7.md  integration-guide.md  inventory-discipline.md  irl-first-approach.md  known-gaps.md  line-length-standards.md  makefile-reference.md  markdown-discipline.md  mesh-adoption-guide.md  mesh-observability.md  mesh-paradigm.md  mesh-troubleshooting.md  multi-repo-mesh.md  naming-convention.md  no-bypass-culture.md  pre-commit-setup.md  security-posture-discipline.md  sentinel-loop.md  seven-pillars.md  shfmt-standards.md  testing-discipline.md  trinity-execution.md  vault-discipline.md  vlan-discipline.md
docs/architecture/: TIERED_SATELLITE_QUICK_REFERENCE.md
group_vars/: network_scheme.yml
inventory/group_vars/all/: vault_common.yml
patterns/: README.md  audit-logging.sh  error-handling.sh  idempotency.sh  validate-bash.sh
scripts/: agent-run.sh  audit-canon.sh  audit-eternal.py  audit-naming-convention.sh  audit_eternal.py  auto-migrate.sh  bauer_parse_audit.py  emergency-revoke.sh  find-broad-excepts.sh  generate-mesh-man.sh  lazarus-drill.sh  mesh-heartbeat.sh  mesh-remediate.sh  ml5-report-helper.py  ml5_report_helper.py  org-audit.sh  playbook-structure-linter.py  publish-cascade.sh  publish-gate.sh  rename-to-kebab.sh  rename-to-standard.sh  repo-init.sh  revert-kebab-migration.sh  rotate-audit.sh  rotate-ssh-keys.sh  rotate-unifi-credentials.sh  sentinel-expiry.sh  sign-all-audit.sh  sync-canon.sh  track-endpoint-coverage.py  track_endpoint_coverage.py  validate-ansible.sh  validate-bash.sh  validate-gitmodules.sh  validate-ml5-scorecard.sh  validate-naming-convention.sh  validate-python.sh  validate-rotation-readiness.sh  validate-security-posture.sh  validate-sops.sh  (+8 more)
tasks/: orchestration-elevation.md
templates/: CONTRIBUTING-template.md  Makefile  README-template.md  README-tier-declaration.md  README.md  device-manifest-template.yml  ml5-scorecard.yml  network_scheme.yml.template  playbook-template.yml  pre-commit-config.yaml.template  readme-template.md  readme-tier-declaration.md  script-template.sh  trinity-ci-template.yml
templates/pre-commit-hooks/: detached-head
tests/integration/: ansible.cfg  device-manifest.yml  mock_unifi.py  run_test.sh  test.unifi_inventory.yml
tests/unit/: test_makefile_targets.py
validators/: README.md  shellcheck-wrapper.sh  validate-bash-headers.sh  validate-seven-pillars.sh
