# RylanLabs Canonical Python Project Configuration Template
# Maturity: v2.0.0
# Guardian: Bauer (Auditor)
# Ministry: Development Standards

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rylan-project"
version = "0.1.0"
description = "Project description here"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

lint.select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (Security)
]

lint.ignore = [
    "S101",  # Use of assert detected (allowed in tests)
    "S607",  # Starting a process with a partial executable path (allowed in tests)
]

lint.exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S607"]
"**/test_*.py" = ["S101", "S607"]
"tests/**" = ["S101", "S607"]
"test_*.py" = ["S101", "S607"]
"**/plugins/inventory/unifi_inventory.py" = ["S603"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage disabled for canon-library as it is primarily bash/makefile
addopts = "-v"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", ".git"]
skips = ["B101", "B607"]  # Skip assert_used and partial_executable_path in tests
